@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2019-12-16
+	Changed: Make internal code report power plan/behaviour changes more explicitly.
 ### 2019-12-08
 	Fixed: ArgumentOutOfRangeException for process select dialog when nothing was selected.
 ### 2019-12-07
